--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "popper.js": "^1.16.1",
     "rxjs": "~7.5.0",
     "socket.io": "^4.5.2",
+    "socket.io-client": "^4.5.2",
     "tslib": "^2.3.0",
     "uuid": "^9.0.0",
     "zone.js": "~0.11.4"
